<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_go_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/menu_go_movie"
            android:checked="false"
            android:icon="@drawable/ic_movie"
            android:title="@string/menu_movie" />

        <item
            android:id="@+id/menu_go_tv_series"
            android:checked="false"
            android:icon="@drawable/ic_series"
            android:title="@string/menu_tv_series" />

        <item
            android:id="@+id/menu_go_tv_channel"
            android:checked="false"
            android:icon="@drawable/ic_channel"
            android:title="@string/menu_tv_channel" />

        <item
            android:id="@+id/menu_go_favourite"
            android:checked="false"
            android:icon="@drawable/ic_favourite"
            android:title="@string/menu_favourite" />

        <item
            android:id="@+id/menu_go_profile"
            android:checkable="false"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/menu_go_setting"
            android:checked="false"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_setting" />

        <item
            android:id="@+id/menu_go_logout"
            android:checked="false"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_log_out" />

        <item
            android:id="@+id/menu_go_log_in"
            android:checked="false"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_log_in" />

    </group>
</menu>