<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/lyt_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_no_item"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_item_found"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/white" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <TextView
                android:id="@+id/text_sign_title"
                fontPath="fonts/customSemiBold.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/menu_profile"
                android:textColor="@color/white"
                android:textSize="26sp"
                tools:ignore="MissingPrefix" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_user" />

                <EditText
                    android:id="@+id/editText_name_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="#00000000"
                    android:hint="@string/name_login"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="16sp" />

            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_email" />

                <EditText
                    android:id="@+id/editText_email_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="#00000000"
                    android:hint="@string/email_login"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="16sp" />

            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_password" />

                <EditText
                    android:id="@+id/editText_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="#00000000"
                    android:hint="@string/password_login"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="16sp" />

            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_phone" />

                <EditText
                    android:id="@+id/editText_phoneNo_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="#00000000"
                    android:hint="@string/phone_login"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="16sp" />

            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_submit"
                fontPath="fonts/customSemiBold.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/blue_btn"
                android:paddingEnd="40dp"
                android:paddingStart="40dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="MissingPrefix" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>