<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/row_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView_noComment_md"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/no_comment_found"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lytCommentBottom"
        android:layout_below="@+id/toolbar_main"
        android:layout_marginStart="@dimen/item_space"
        android:layout_marginTop="@dimen/item_space"
        android:clipToPadding="false" />

    <RelativeLayout
        android:id="@+id/lytCommentBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:drawable/editbox_background_normal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_round"
            app:riv_corner_radius="5dp" />

        <EditText
            android:id="@+id/edt_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/avatar"
            android:layout_toStartOf="@+id/image_sent"
            android:background="@color/white"
            android:hint="@string/leave_your_comment"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/cursor_gray"
            android:textSize="16sp">

        </EditText>

        <ImageView
            android:id="@+id/image_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:src="@drawable/send" />

    </RelativeLayout>
</RelativeLayout>