<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#85000000"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="false"
            app:elevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dialog_rattop_bg">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_toStartOf="@+id/imageView_close_rating"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingBottom="15dp"
                        android:paddingEnd="12dp"
                        android:paddingStart="12dp"
                        android:paddingTop="15dp"
                        android:text="@string/rating"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView_close_rating"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_close" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/lytRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:lineSpacingMultiplier="1.2"
                        android:text="@string/rating_des"
                        android:textColor="@color/rate_text"
                        android:textSize="16sp" />

                    <com.github.ornolfr.ratingview.RatingView
                        android:id="@+id/ratingView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        app:drawable_empty="@drawable/ic_star_empty"
                        app:drawable_filled="@drawable/ic_star_filled"
                        app:drawable_half="@drawable/ic_star_half"
                        app:drawable_margin="2dp"
                        app:drawable_size="50dp"
                        app:is_indicator="false"
                        app:max_count="5" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="20dp"
                        android:background="#edeff2" />

                    <Button
                        android:id="@+id/button_rate_dialog"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/blue_btn"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:visibility="gone" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</LinearLayout>